February mielstone disable auth and style your wallet connect component
Set the prop ignoreConnectForTesting to true to disable the wallet connect for quick loading and testing other none wallet related components. Also provided the ability to set text and CSS classes to style the wallet connect component.

--- a/example/ui/src/styles/Home.module.css
+++ b/example/ui/src/styles/Home.module.css
@@ -207,3 +207,13 @@
     grid-template-columns: repeat(2, 50%);
   }
 }
+
+
+.headerShield {
+ background-color: aquamarine;
+ color: coral;
+}
+.statusShield {
+ background-color: chocolate;
+ font-style: italic;
+}
