Launch ZK Shield and add CSS Classes for styling providers
Allowed ZK Shield to be automatically launched or programatically. Use the method window.zkshield.launch() to start the process of connecting a wallet. Adding CSS classes to style the network choice and wallet provider selection. Also stored connected network in authentication state

--- a/example/ui/src/styles/Home.module.css
+++ b/example/ui/src/styles/Home.module.css
@@ -217,3 +217,42 @@
  background-color: chocolate;
  font-style: italic;
 }
+
+.zkshield-main-container {
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  padding: 5rem;
+  min-height: 100vh;
+}
+
+.zkshield-inner-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  padding: 6rem 0;
+}
+
+.selectNetworkContainer {
+  background-color: azure;
+}
+
+.selectProviderContainer {
+  background-color: beige;
+}
+.selectProviderContainer ul {
+  list-style-type: none;
+}
+.selectProviderContainer ul li {
+  list-style-type: none;
+  margin: 20px 0 20px 0;
+  padding: 20px 10px 20px 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
