--- a/example/ui/src/styles/Home.module.css
+++ b/example/ui/src/styles/Home.module.css
@@ -303,6 +303,11 @@
   float: right;
 }
 
+.signMessageInput {
+  padding: 10px;
+  border: 1px solid black;
+}
+
 /* Add media queries for responsiveness - when the screen is 500px wide or less, stack the links on top of each other */
 @media screen and (max-width: 500px) {
   .header a {
